--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/index.css"/>
 </head>
 <body>
-    
+    <section class="topsection">
+        <h1>Jostin Marrero</h1>
+        <nav>
+            <button><a href="index.html">HOME</a></button>
+            <button><a href="index.html">ABOUT</a></button>
+            <button><a href="index.html">CONTACT</a></button>
+            <button><a href="index.html">PROJECTS</a></button>
+        </nav>
+        <h1> Introduction to my projects </h1>
+        <p>
+
+        </p>
+        <img src="https://picsum.photos/seed/picsum/400/200"/>
+    </section>
+<section class="row">
+    <img src="https://picsum.photos/id/237/200/300"/>
+    <img src="https://picsum.photos/id/237/200/300"/>
+    <img src="https://picsum.photos/id/237/200/300"/>
+    <img src="https://picsum.photos/id/237/200/300"/>
+    <div class="description">
+some text will go here describing all the prohects to the left.
+    </div>
+</section>
+
+    <footer>
+        <button><a href="index.html">Contact Me</a></button>
+    </footer>
 </body>
 </html>
